--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
+  "type": "module",
   "name": "api-products",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node-dev --respawn src/main.ts",
+    "build": "tsc",
+    "migrate": "sequelize-cli db:migrate",
+    "migrate1": "npx ts-node -r tsconfig-paths/register ./node_modules/sequelize-cli/lib/sequelize db:migrate",
+    "migrate2" : "set NODE_ENV=development npx sequelize-cli db:migrate",
+    "migrate3": "node --loader ts-node/esm ./node_modules/.bin/sequelize-cli db:migrate",
+    "migrate4" :"ts-node --esm ./node_modules/.bin/sequelize-cli db:migrate",
+    "seed": "sequelize db:seed:all",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
@@ -18,8 +28,11 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.1",
+    "sequelize-cli": "^6.6.2",
     "sequelize-typescript": "^2.1.6",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.4"
   }
 }
